# src_platform_libanssipki-client

./: .gitignore  AUTHORS  CHANGELOG  Doxyfile  README-fr.txt  README.md  TODO  anssipki.i  libanssipki-client.pc.in  setup.py
cfg/: anssipki-p11.ini  anssipki.ini-sample
cpp_src/: Makefile.am  algos.cc  algos.h  csr_export.cc  csr_export.h  p12_export.cc  p12_export.h  utils.cc  utils.h
cpp_src/pkcs11/: libpkcs11.c  libpkcs11.h  libscdl.c  libscdl.h  p11-exception.cc  p11-exception.h  p11-helper.cc  p11-helper.h  pkcs11.h
cpp_src/x509/: private-key.h  public-key.h  x509cert.cc  x509cert.h  x509crl.cc  x509crl.h  x509name.cc  x509name.h  x509req.cc  x509req.h  x509tbs.cc  x509tbs.h
libanssipki/: CACertificate.py  CSR.py  Certificate.py  Conf.py  DBHelper.py  Feedcard.py  Template.py  Validate.py  __init__.py
locales/en_US/LC_MESSAGES/: libanssipki.po
locales/fr_FR/LC_MESSAGES/: libanssipki.po
templates/: CA.tpl  CERT.tpl  CLIP_AUTH.tpl  CLIP_DISK.tpl  SSL_CLIENT.tpl  SSL_SERVER.tpl
tests/: Makefile.am  cmdline.cc  test_main.cc  test_main_2.cc  test_main_3.cc  test_main_4.cc  test_main_5.cc
tests/unit_tests/: Makefile.am  check_x509name.cc
